# OpenGLProjects

Exercise_1/: CMakeLists.txt  build.py
Exercise_1/3rdPartyLibs/: build_glfw_standalone.py
Exercise_1/Devices/Window/: CMakeLists.txt
Exercise_1/Devices/Window/Common/: CMakeLists.txt
Exercise_1/Devices/Window/Common/include/: WindowBase.h
Exercise_1/Devices/Window/Common/src/: WindowBase.cpp
Exercise_1/Devices/Window/DiegoWindow/: CMakeLists.txt
Exercise_1/Devices/Window/DiegoWindow/include/: DiegofiedWindow.h
Exercise_1/Devices/Window/DiegoWindow/src/: DiegofiedWindow.cpp
Exercise_1/Example/: CMakeLists.txt  app.cpp
Exercise_1/cmake/: AssureOutOfSourceBuild.cmake  install-helpers.cmake
